Get frecon working with mustash.

This CL adds a mus specific ConsoleServiceProviderDelegate. It sends
IPCs to mus-ws to take and relinquish display control. This is
necessary because dbus and display management are not in the same
process anymore.

BUG=682804

Review-Url: https://codereview.chromium.org/2648433006
Cr-Commit-Position: refs/heads/master@{#445857}

Former-commit-id: a653f8962715401e37ae038f4946e85ab6433d6d